# teste

./: README.md
back-end/: .pylintrc  README.md  pyproject.toml  requirements.txt
back-end/src/backend/: settings.py  urls.py
back-end/src/core/: admin.py  consts.py  handlers.py  models.py  urls.py  utils.py
back-end/src/core/api/: filters.py  serializers.py  viewsets.py
back-end/src/core/migrations/: 0001_initial.py
back-end/src/profissional/: admin.py  models.py  urls.py
back-end/src/profissional/api/: serializers.py  viewsets.py
back-end/src/profissional/migrations/: 0001_initial.py
docs/: README.md
front-end/: README.md  angular.json  package-lock.json  package.json
front-end/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
front-end/src/app/_helpers/: auth.guard.ts  error.interceptor.ts  jwt.interceptor.ts
front-end/src/app/_models/: retorno-api.ts
front-end/src/app/_services/: authentication.service.ts
front-end/src/app/home/: home.component.html
front-end/src/app/login/: login.component.html  login.component.ts
front-end/src/app/modules/dashboard/: dashboard-routing.module.ts  dashboard.module.ts
front-end/src/app/modules/profissional/: profissional-routing.module.ts  profissional.module.ts
mobile/: pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/app/: app_module.dart  app_widget.dart
mobile/lib/app/modules/: main_screen.dart
mobile/lib/app/shared/: consts.dart
(+58 files in other folders)
